# ECE-759-Final-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
project/data/crops/: test_images.txt  train_images.txt
project/data/roboflow/: README.roboflow.txt  data.yaml
project/data/roboflow/train/labels/: Gemini_Generated_Image_s6ouvss6ouvss6ou_png.rf.rK48piPa9JWAn5ycxDwx.txt  Screenshot 2026-04-03 181102_png.rf.hvVA71dgL5HEQ4fJMiwi.txt  Screenshot 2026-04-03 221020_png.rf.TEmtDoIKeDkvONfj2Ajx.txt  Screenshot 2026-04-03 221039_png.rf.l9LbK1HMSMViNLPPA2H3.txt  Screenshot 2026-04-03 221056_png.rf.lv9Hc6UweR8EcCXe5j9e.txt  Screenshot 2026-04-03 221116_png.rf.p3qfmhLShQGLzjKO8HwL.txt  Screenshot 2026-04-03 221126_png.rf.i7oOuVLuMu2R6kPMSjVf.txt  Screenshot 2026-04-03 221144_png.rf.o06A6y9aqb2msBKh5164.txt  Screenshot 2026-04-03 221225_png.rf.pBA8yEKXkWD9Rf10A2IF.txt  Screenshot 2026-04-03 221235_png.rf.hpcXPHrOdrSnw6grTMrw.txt  Screenshot 2026-04-03 221246_png.rf.9oJxNIvqHPCOYGHqz2MH.txt  Screenshot 2026-04-03 221307_png.rf.HdDYbT94fUTDgp4qXvqI.txt  Screenshot 2026-04-03 221413_png.rf.A6PBZTH4Xw7dmb397XQu.txt  Screenshot 2026-04-03 221430_png.rf.IgoiUqwNveVhjRfHY1Ps.txt  Screenshot 2026-04-03 221445_png.rf.g4jhdydYJ2R0xZ2WGwRY.txt  (+110 more)
project/include/: hog.h  nms.h  sliding_window.h  sliding_window_cuda.h  svm.h  types.h
project/models/: bias.txt
project/results/: output_CUDA_results.csv  output_OpenMP_results.csv  output_sequential_results.csv
project/scripts/: f1_diagnosis.py  generate_ref_bin.py  hog_utils.py  plots.py  prepare_dataset.py  train_svm.py
project/src/: hog.cpp  main.cpp  nms.cpp  sliding_window.cpp  sliding_window_cuda.cu  sliding_window_cuda_host.cpp  sliding_window_omp.cpp  svm.cpp
project/test/: test_hog.cpp
